# CookBook

./: .gitignore  README.md  claude_code.ts  pyproject.toml
Fine-Tuning/: Fine-Tuning_Reasoning.ipynb
Proprecessing/: common_voice_22_ko.py  translate_csv.py
Proprecessing/AIHub_voice/: 명령어데이터전처리코드1.py  명령어데이터전처리코드2.py
VLM-LoRA-cloths-Tutorial/: a_preprocessing.ipynb  b_before_inference.ipynb  c_training.ipynb  d_after_inference-150step.ipynb  requirements.txt
albumin-data-collection/: .env.example  .gitignore  collect_albumin_api.py  collect_albumin_crawl.py  requirements.txt
examples/: OpenAI로_Gemini모델사용하기.ipynb  OpenAI로_Ollama모델사용하기.ipynb
opik/: main.py
python-tutorial/: part1_chapter01_input.ipynb  part1_chapter02_print.ipynb  part1_chapter03_logging.ipynb  part1_첫_대화_시작하기.ipynb  part2_chapter04_type.ipynb  part2_chapter05_variable.ipynb  part2_chapter06_type_conversion.ipynb  part2_컴퓨터가_이해하는_방식.ipynb  part3_chapter07_list.ipynb  part3_chapter08_tuple.ipynb  part3_chapter09_set.ipynb  part3_chapter10_dictionary.ipynb  part3_여러_데이터_다루기.ipynb  part4_chapter11_for.ipynb  part4_chapter12_while.ipynb  part4_chapter13_if.ipynb  part4_chapter14_break_continue.ipynb  part4_반복과_조건.ipynb  part5_chapter15_function.ipynb  part5_chapter16_parameter_return.ipynb  part5_chapter17_default_keyword.ipynb  part5_chapter18_args_kwargs.ipynb  part5_chapter19_scope.ipynb  part5_함수_재사용_가능한_코드.ipynb
자료구조/: 1_recursion.py  2_double_linkedlist.py  2_linkedlist.py  2_linkedlist_2.py  2_nondume_double_linkedlist.py
(+2 files in other folders)
